@@ -1,3 +1,4 @@
+* Position new record based on order
 * Add infinite scroll
 
 Version 5.4.2 - 2019-12-16
